--- a/src/styles/spotLight.css
+++ b/src/styles/spotLight.css
@@ -6,14 +6,14 @@
   background-color: #222222;
 }
 
-h1 {
+.spotLight-container h1 {
   position: relative;
   text-transform: uppercase;
   color: #333333;
   font-size: 8rem;
 }
 
-h1::after {
+.spotLight-container h1::after {
   content: "spotlight";
   position: absolute;
   top: 0;
